Correct SCSS import and add body text alignment
Fix import statement and add body styling.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,3 +2,7 @@
 ---
 
 @import "no-style-please";
+
+body {
+  text_align = center;
+}
